# raylib_C_game_of_life

./: .gitignore  CMakeLists.txt  README.md
sources/: board.c  board.h  cell.c  cell.h  consts.h  main.c
